// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeriodStatsFilter should merge stats filters on period change 1`] = `
[
  {
    "filters": Immutable.Map {
      "period": Immutable.Map {
        "start_datetime": "2024-04-19T00:00:00Z",
        "end_datetime": "2024-04-19T23:59:59Z",
      },
    },
    "type": "MERGE_STATS_FILTERS",
  },
]
`;

exports[`PeriodStatsFilter should render period stats filter 1`] = `
<div>
  <button
    aria-disabled="false"
    class="wrapper fill secondary medium"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft medium"
      >
        calendar_today
      </i>
      <span
        class="wrapper"
      >
        May 2, 2021 - May 3, 2021
        <i
          class="material-icons icon isRight medium"
        >
          arrow_drop_down
        </i>
      </span>
    </span>
  </button>
</div>
`;

exports[`PeriodStatsFilter should update the period if the period is value is greater than the expected max span 1`] = `
[
  {
    "filters": Immutable.Map {
      "period": Immutable.Map {
        "start_datetime": "2020-05-02T00:00:00Z",
        "end_datetime": "2020-07-31T23:59:59Z",
      },
    },
    "type": "MERGE_STATS_FILTERS",
  },
]
`;
